// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ProfileSecondMenu renders correctly when connected 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                "Save to Aurora",
                              ],
                              "props": {
                                "maxFontSizeMultiplier": undefined,
                                "numberOfLines": 1,
                                "ref": {
                                  "current": null,
                                },
                                "selectable": false,
                                "style": [
                                  {
                                    "textAlign": "left",
                                  },
                                  {
                                    "color": "rgba(28, 27, 31, 1)",
                                    "writingDirection": "ltr",
                                  },
                                  [
                                    {
                                      "fontFamily": "System",
                                      "fontSize": 14,
                                      "fontWeight": "500",
                                      "letterSpacing": 0.1,
                                      "lineHeight": 20,
                                    },
                                    [
                                      {
                                        "marginHorizontal": 16,
                                        "marginVertical": 9,
                                        "textAlign": "center",
                                      },
                                      false,
                                      {
                                        "marginHorizontal": 24,
                                        "marginVertical": 10,
                                      },
                                      undefined,
                                      false,
                                      {
                                        "color": "rgba(255, 255, 255, 1)",
                                        "fontFamily": "System",
                                        "fontSize": 14,
                                        "fontWeight": "500",
                                        "letterSpacing": 0.1,
                                        "lineHeight": 20,
                                      },
                                      [
                                        {
                                          "fontFamily": "calibre_app_semibold",
                                          "fontSize": 24,
                                        },
                                        undefined,
                                      ],
                                    ],
                                  ],
                                ],
                                "testID": "button-text",
                              },
                              "type": "Text",
                            },
                          ],
                          "props": {
                            "style": [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "center",
                              },
                              undefined,
                            ],
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": undefined,
                        "accessibilityLabel": undefined,
                        "accessibilityRole": "button",
                        "accessibilityState": {
                          "disabled": false,
                        },
                        "accessible": undefined,
                        "delayLongPress": undefined,
                        "disabled": false,
                        "hitSlop": undefined,
                        "onLongPress": undefined,
                        "onPress": [class Function],
                        "onPressIn": [Function],
                        "onPressOut": [Function],
                        "ref": null,
                        "style": [Function],
                        "testID": "button",
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "screenWidth": 400,
                    "style": {
                      "0": {
                        "borderRadius": 16,
                        "height": 50,
                        "marginBottom": 16,
                        "marginTop": 16,
                      },
                      "1": {
                        "width": 270,
                      },
                      "2": {
                        "marginLeft": 16,
                      },
                      "backgroundColor": "#00ffe6",
                      "borderColor": "transparent",
                      "borderRadius": 16,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "flex": undefined,
                      "minWidth": 64,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": AnimatedValue {
                          "_v": 0,
                        },
                        "width": 0,
                      },
                      "shadowOpacity": AnimatedValue {
                        "_v": 0,
                      },
                      "shadowRadius": AnimatedValue {
                        "_v": 0,
                      },
                    },
                    "testID": "button-container",
                  },
                  "type": "Animated.View",
                },
              ],
              "props": {
                "ref": null,
                "style": {
                  "backgroundColor": "#00ffe6",
                  "borderRadius": 16,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": AnimatedValue {
                      "_v": 0,
                    },
                    "width": 0,
                  },
                  "shadowOpacity": AnimatedValue {
                    "_v": 0,
                  },
                  "shadowRadius": AnimatedValue {
                    "_v": 0,
                  },
                },
                "testID": "button-container-outer-layer",
              },
              "type": "Animated.View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                "Show Advanced Options",
                              ],
                              "props": {
                                "maxFontSizeMultiplier": undefined,
                                "numberOfLines": 1,
                                "ref": {
                                  "current": null,
                                },
                                "selectable": false,
                                "style": [
                                  {
                                    "textAlign": "left",
                                  },
                                  {
                                    "color": "rgba(28, 27, 31, 1)",
                                    "writingDirection": "ltr",
                                  },
                                  [
                                    {
                                      "fontFamily": "System",
                                      "fontSize": 14,
                                      "fontWeight": "500",
                                      "letterSpacing": 0.1,
                                      "lineHeight": 20,
                                    },
                                    [
                                      {
                                        "marginHorizontal": 16,
                                        "marginVertical": 9,
                                        "textAlign": "center",
                                      },
                                      false,
                                      {
                                        "marginHorizontal": 12,
                                      },
                                      undefined,
                                      false,
                                      {
                                        "color": "#00ffe6",
                                        "fontFamily": "System",
                                        "fontSize": 14,
                                        "fontWeight": "500",
                                        "letterSpacing": 0.1,
                                        "lineHeight": 20,
                                      },
                                      [
                                        {
                                          "fontFamily": "calibre_app_semibold",
                                          "fontSize": 14,
                                        },
                                        {
                                          "color": "rgba(28, 27, 31, 1)",
                                        },
                                        undefined,
                                      ],
                                    ],
                                  ],
                                ],
                                "testID": "button-text",
                              },
                              "type": "Text",
                            },
                          ],
                          "props": {
                            "style": [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "center",
                              },
                              [
                                {
                                  "height": 28,
                                  "marginBottom": 12,
                                  "marginTop": 16,
                                },
                                {
                                  "marginRight": 12,
                                },
                              ],
                            ],
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": undefined,
                        "accessibilityLabel": undefined,
                        "accessibilityRole": "button",
                        "accessibilityState": {
                          "disabled": undefined,
                        },
                        "accessible": undefined,
                        "delayLongPress": undefined,
                        "disabled": false,
                        "hitSlop": undefined,
                        "onLongPress": undefined,
                        "onPress": [class Function],
                        "onPressIn": [Function],
                        "onPressOut": [Function],
                        "ref": null,
                        "style": [Function],
                        "testID": "button",
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "style": {
                      "backgroundColor": "transparent",
                      "borderColor": "transparent",
                      "borderRadius": 10,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "flex": undefined,
                      "minWidth": 64,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": AnimatedValue {
                          "_v": 0,
                        },
                        "width": 0,
                      },
                      "shadowOpacity": AnimatedValue {
                        "_v": 0,
                      },
                      "shadowRadius": AnimatedValue {
                        "_v": 0,
                      },
                    },
                    "testID": "button-container",
                  },
                  "type": "Animated.View",
                },
              ],
              "props": {
                "ref": null,
                "style": {
                  "backgroundColor": "transparent",
                  "borderRadius": 10,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": AnimatedValue {
                      "_v": 0,
                    },
                    "width": 0,
                  },
                  "shadowOpacity": AnimatedValue {
                    "_v": 0,
                  },
                  "shadowRadius": AnimatedValue {
                    "_v": 0,
                  },
                },
                "testID": "button-container-outer-layer",
              },
              "type": "Animated.View",
            },
          ],
          "props": {
            "style": [
              {
                "alignItems": "center",
                "backgroundColor": "#250D6D",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 10,
              },
              undefined,
            ],
          },
          "type": "View",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`ProfileSecondMenu renders correctly when disconnected 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                "Save to Aurora",
                              ],
                              "props": {
                                "maxFontSizeMultiplier": undefined,
                                "numberOfLines": 1,
                                "ref": {
                                  "current": null,
                                },
                                "selectable": false,
                                "style": [
                                  {
                                    "textAlign": "left",
                                  },
                                  {
                                    "color": "rgba(28, 27, 31, 1)",
                                    "writingDirection": "ltr",
                                  },
                                  [
                                    {
                                      "fontFamily": "System",
                                      "fontSize": 14,
                                      "fontWeight": "500",
                                      "letterSpacing": 0.1,
                                      "lineHeight": 20,
                                    },
                                    [
                                      {
                                        "marginHorizontal": 16,
                                        "marginVertical": 9,
                                        "textAlign": "center",
                                      },
                                      false,
                                      {
                                        "marginHorizontal": 24,
                                        "marginVertical": 10,
                                      },
                                      undefined,
                                      false,
                                      {
                                        "color": "rgba(28, 27, 31, 0.38)",
                                        "fontFamily": "System",
                                        "fontSize": 14,
                                        "fontWeight": "500",
                                        "letterSpacing": 0.1,
                                        "lineHeight": 20,
                                      },
                                      [
                                        {
                                          "fontFamily": "calibre_app_semibold",
                                          "fontSize": 24,
                                        },
                                        undefined,
                                      ],
                                    ],
                                  ],
                                ],
                                "testID": "button-text",
                              },
                              "type": "Text",
                            },
                          ],
                          "props": {
                            "style": [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "center",
                              },
                              undefined,
                            ],
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": undefined,
                        "accessibilityLabel": undefined,
                        "accessibilityRole": "button",
                        "accessibilityState": {
                          "disabled": true,
                        },
                        "accessible": undefined,
                        "delayLongPress": undefined,
                        "disabled": true,
                        "hitSlop": undefined,
                        "onLongPress": undefined,
                        "onPress": [class Function],
                        "onPressIn": [Function],
                        "onPressOut": [Function],
                        "ref": null,
                        "style": [Function],
                        "testID": "button",
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "screenWidth": 400,
                    "style": {
                      "0": {
                        "borderRadius": 16,
                        "height": 50,
                        "marginBottom": 16,
                        "marginTop": 16,
                      },
                      "1": {
                        "width": 270,
                      },
                      "2": {
                        "marginLeft": 16,
                      },
                      "backgroundColor": "rgba(28, 27, 31, 0.12)",
                      "borderColor": "transparent",
                      "borderRadius": 16,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "flex": undefined,
                      "minWidth": 64,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": AnimatedValue {
                          "_v": 0,
                        },
                        "width": 0,
                      },
                      "shadowOpacity": AnimatedValue {
                        "_v": 0,
                      },
                      "shadowRadius": AnimatedValue {
                        "_v": 0,
                      },
                    },
                    "testID": "button-container",
                  },
                  "type": "Animated.View",
                },
              ],
              "props": {
                "ref": null,
                "style": {
                  "backgroundColor": "rgba(28, 27, 31, 0.12)",
                  "borderRadius": 16,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": AnimatedValue {
                      "_v": 0,
                    },
                    "width": 0,
                  },
                  "shadowOpacity": AnimatedValue {
                    "_v": 0,
                  },
                  "shadowRadius": AnimatedValue {
                    "_v": 0,
                  },
                },
                "testID": "button-container-outer-layer",
              },
              "type": "Animated.View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                "Show Advanced Options",
                              ],
                              "props": {
                                "maxFontSizeMultiplier": undefined,
                                "numberOfLines": 1,
                                "ref": {
                                  "current": null,
                                },
                                "selectable": false,
                                "style": [
                                  {
                                    "textAlign": "left",
                                  },
                                  {
                                    "color": "rgba(28, 27, 31, 1)",
                                    "writingDirection": "ltr",
                                  },
                                  [
                                    {
                                      "fontFamily": "System",
                                      "fontSize": 14,
                                      "fontWeight": "500",
                                      "letterSpacing": 0.1,
                                      "lineHeight": 20,
                                    },
                                    [
                                      {
                                        "marginHorizontal": 16,
                                        "marginVertical": 9,
                                        "textAlign": "center",
                                      },
                                      false,
                                      {
                                        "marginHorizontal": 12,
                                      },
                                      undefined,
                                      false,
                                      {
                                        "color": "#00ffe6",
                                        "fontFamily": "System",
                                        "fontSize": 14,
                                        "fontWeight": "500",
                                        "letterSpacing": 0.1,
                                        "lineHeight": 20,
                                      },
                                      [
                                        {
                                          "fontFamily": "calibre_app_semibold",
                                          "fontSize": 14,
                                        },
                                        {
                                          "color": "rgba(28, 27, 31, 1)",
                                        },
                                        undefined,
                                      ],
                                    ],
                                  ],
                                ],
                                "testID": "button-text",
                              },
                              "type": "Text",
                            },
                          ],
                          "props": {
                            "style": [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "center",
                              },
                              [
                                {
                                  "height": 28,
                                  "marginBottom": 12,
                                  "marginTop": 16,
                                },
                                {
                                  "marginRight": 12,
                                },
                              ],
                            ],
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": undefined,
                        "accessibilityLabel": undefined,
                        "accessibilityRole": "button",
                        "accessibilityState": {
                          "disabled": undefined,
                        },
                        "accessible": undefined,
                        "delayLongPress": undefined,
                        "disabled": false,
                        "hitSlop": undefined,
                        "onLongPress": undefined,
                        "onPress": [class Function],
                        "onPressIn": [Function],
                        "onPressOut": [Function],
                        "ref": null,
                        "style": [Function],
                        "testID": "button",
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "style": {
                      "backgroundColor": "transparent",
                      "borderColor": "transparent",
                      "borderRadius": 10,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "flex": undefined,
                      "minWidth": 64,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": AnimatedValue {
                          "_v": 0,
                        },
                        "width": 0,
                      },
                      "shadowOpacity": AnimatedValue {
                        "_v": 0,
                      },
                      "shadowRadius": AnimatedValue {
                        "_v": 0,
                      },
                    },
                    "testID": "button-container",
                  },
                  "type": "Animated.View",
                },
              ],
              "props": {
                "ref": null,
                "style": {
                  "backgroundColor": "transparent",
                  "borderRadius": 10,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": AnimatedValue {
                      "_v": 0,
                    },
                    "width": 0,
                  },
                  "shadowOpacity": AnimatedValue {
                    "_v": 0,
                  },
                  "shadowRadius": AnimatedValue {
                    "_v": 0,
                  },
                },
                "testID": "button-container-outer-layer",
              },
              "type": "Animated.View",
            },
          ],
          "props": {
            "style": [
              {
                "alignItems": "center",
                "backgroundColor": "#250D6D",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 10,
              },
              undefined,
            ],
          },
          "type": "View",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;
